# toolkit

./: .gitignore  CMakeLists.txt  INSTALL  setup.py
clientdb/: CMakeLists-CXX  CMakeLists-CXX.cmake  CMakeLists-MyC++.cmake  CMakeLists-myc++.cmake  CMakeLists-pqc++.cmake  CMakeLists.txt  CXX.cmake  Datasource.java  INSTALL  Java.cmake  Main.java  clean.sh  clientdb-er-mysql.cpp  clientdb-er.cpp  clientdb-er.hpp  clientdb-mysql.cpp  clientdb-mysql.hpp  clientdb-postgresql.cpp  clientdb-postgresql.hpp  clientdb.cpp  clientdb.hpp  config.h.in  developing.cpp  pom.xml  postgresql.cpp  toolkit-clientdb-mysql.hpp  toolkit-clientdb-postgresql.hpp  toolkit-clientdb.hpp  versionInfo-myc++.h.in  versionInfo-pqc++.h.in  versionInfo.h.in
clientdb/src/: Business.cpp  CMakeLists.txt  Serdata.hpp  SerdataER.cpp  SerdataER.hpp  SerdataERMySQL.cpp  SerdataMySQL.cpp  clientdb-er-mysql.cpp  clientdb-er.cpp  clientdb-er.hpp  clientdb-mysql.cpp  clientdb.cpp  clientdb.hpp  config.h.in  developing.cpp  src.kdev4
clientdb/src/.kdev4/: src.kdev4
clientdb/src/codeblocks.sandbox/faseOne/: faseOne.cbp
clientdb/src/main/java/octetos/toolkit/clientdb/: Connector.java  Datconnect.java
clientdb/src/test/java/octetos/toolkit/clientdb/: ConnectorTest.java
clientdb/test/: CMakeLists.txt  myc++-v5.cpp  pqc++-v3.cpp  testing.cpp  testing.mm
cmake/Modules/: PostgreSQLConfig.cmake  business-commonConfig.cmake  sqlite3Config.cmake  toolkit-clientdb-c++Config.cmake  toolkit-clientdbConfig.cmake  toolkit-common-c++Config.cmake  toolkit-commonConfig.cmake
cmake/Modules/toolkit/: mysql-c++Config.cmake  octetos-toolkit-common-c++Config.cmake
codes/src/apidb/: CMakeLists.txt  codes.cpp  codes.db  codes.hpp  develop.cpp
common/: AUTHORS  CMakeLists-C.cmake  CMakeLists-CXX  CMakeLists-CXX.cmake  CMakeLists-F  CMakeLists-JAVA  CMakeLists-OBJC  CMakeLists-PY  CMakeLists.txt  CXX.cmake  Error.cpp  Error.hpp  INSTALL  Java.cmake  Licence.cpp  Licence.hpp  Main.java  Makefile-ObjC  Makefile.am  Makefile.in  Message.cpp  Message.hpp  Object.cpp  Object.hpp  Package.hpp  README  Version-parser.cpp  Version.cpp  Version.hpp  Version.java.in  autogen.sh  clean.sh  common-parser.cpp  common.c  common.cpp  common.h  common.hpp  common.py  config.h  config.h.in  (+24 more)
common/parserVersion-C++/: driver.cc  driver.hh  parser.cc  parser.hh  parser.yy  scanner.cc  scanner.ll  version-c++.cc
common/src/: Business.cpp  CMakeLists-C  CMakeLists-CXX  CMakeLists.txt  Makefile.am  Makefile.in  clean.sh  common.cpp  common.py  config.h.in  main.c  main.cc  toolkit.cpp  toolkit.hpp  toolkit.py
common/src/main/java/octetos/toolkit/common/: Object.java  Version.java
common/src/test/java/octetos/toolkit/: AppTest.java
common/src/test/java/octetos/toolkit/common/: VersionTest.java
common/tests/: CMakeLists.txt  Makefile.am  Makefile.in  clean.sh  developing.cpp  main.cc  testing.cpp  v0.c  v3.cc  v4.cc  v5.cc  v6.cc  ver  ver6
common/toolkit/common/: Version.java
common/version-reader/: CMakeLists-C.cmake  CMakeLists-CXX.cmake  CMakeLists.txt  Driver.h  Makefile.am  Makefile.in  configure.ac  develop.c  driver.cpp  driver.h  driver.hpp  lexer.l  lexer.ll  main.cpp  parser.y  parser.yy
common/version-reader-c++/: CMakeLists.txt  Makefile.am  configure.ac  driver.cpp  driver.hpp  lexer.l  parser.yy  scanner.hpp
common/version-reader/src/: Makefile.am  Makefile.in  main.cc
common/version-reader/tests/: Makefile.am  Makefile.in  main.c  v0.c
dep/: libmysqlclient.so.20
dep/mysql/: my_config.h  mysql_version.h
gentoo/offline/: downloader.sh
gentoo/offline/src/: downloader.py
ing/: MySQL.mwb  RQs.ods  Requisitos.ods  alpha.mwb  alpha.mwb.bak
objects/: CMakeLists.txt  CXX.cmake  config.h.in  develop.cpp  objects.cpp  objects.hpp
rc/: cotizacion.ott
serdb/src/: SerdataER.hpp
serdb/src/codeblocks.sandbox/faseOne/: faseOne.layout
serdb/src/testing/: develop.cpp
src/: Business.hpp  CMakeLists.txt  Database.h  Database.hpp  DatabaseMySQL.c  DatabaseMySQL.cpp  Serdata.cpp  Serdata.hpp  SerdataMySQL.cpp
src/cmake/Modules/: FindMySQL.cmake
src/sandboxCodeblocks/: sandboxCodeblocks.cbp
src/testing/: Database.h  DatabaseMySQL.c  conections.c  configure.ac  configure.ac.old2  createLinks.sh
src/testing/.deps/: DatabaseMySQL.Po  conections.Po
