AC_PREREQ([2.69])
AC_INIT([toolkit-common], [3.7.1-snapshot], [azael.devel@gmail.com])
AC_CONFIG_SRCDIR([common.cpp])
AC_CONFIG_HEADERS([configure.h])


# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_OBJCXX


# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
