CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(toolkit-clientdb VERSION 0.2.1.0 LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
SET(toolkit-clientdb_VERSION_STAGE "alpha")
configure_file ("${PROJECT_SOURCE_DIR}/config.h.in" "${PROJECT_BINARY_DIR}/config.h")


FIND_PACKAGE(MySQL REQUIRED PATHS ${PROJECT_SOURCE_DIR}/../../cmake/Modules/)
IF(MySQL_FOUND)
	INCLUDE_DIRECTORIES(${MYSQL_INCLUDE_DIR})
ENDIF()
FIND_PACKAGE(toolkit-common REQUIRED PATHS ${PROJECT_SOURCE_DIR}/../../cmake/Modules/)
IF(TOOLKIT_COMMON_FOUND)
	INCLUDE_DIRECTORIES(${TOOLKIT_COMMON_INCLUDE_DIR})
ENDIF()


ADD_EXECUTABLE(developing clientdb-mysql.cpp clientdb-er-mysql.cpp clientdb-er.cpp clientdb.cpp developing.cpp)
TARGET_LINK_LIBRARIES(developing ${TOOLKIT_COMMON_LIBRARY} ${MYSQL_LIBRARY})
ADD_LIBRARY(toolkit-clientdb STATIC clientdb-mysql.cpp clientdb-er-mysql.cpp clientdb-er.cpp clientdb.cpp)
TARGET_LINK_LIBRARIES(toolkit-clientdb ${TOOLKIT_COMMON_LIBRARY} ${MYSQL_LIBRARY})
ADD_LIBRARY(toolkit-clientdb.${toolkit-clientdb_VERSION_MAJOR}.${toolkit-clientdb_VERSION_MINOR}.${toolkit-clientdb_VERSION_PATCH} SHARED clientdb-mysql.cpp clientdb-er-mysql.cpp clientdb-er.cpp clientdb.cpp)
TARGET_LINK_LIBRARIES(toolkit-clientdb ${TOOLKIT_COMMON_LIBRARY} ${MYSQL_LIBRARY})

include (InstallRequiredSystemLibraries)
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/License.txt")
SET(CPACK_PACKAGE_VERSION_MAJOR "${toolkit-clientdb_VERSION_MAJOR}")
SET(CPACK_PACKAGE_VERSION_MINOR "${toolkit-clientdb_VERSION_MINOR}")
include (CPack)
