AC_INIT(conections.c)

PACKAGE=conectios
VERSION=0.1.0

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

#INTI_REQUIRED_VERSION=1.0.7
#PKG_CHECK_MODULES(INTI, inti-1.0 >= $INTI_REQUIRED_VERSION)
#AC_SUBST(INTI_CFLAGS)
#AC_SUBST(INTI_LIBS)

#AC_PROG_CXX
AC_PROG_CC
AC_PROG_LN_S

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
